fix: made code sections more aligned

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -28,6 +28,8 @@ article {
         
         code {
             background-color: transparent;
+            padding: 0;
+            border-radius: 0;
         }
     }
     
